--- a/Meteor.js Development/CourseWork_first/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork_first/dev/image_share/image_share.html
@@ -9,5 +9,5 @@
 </body>
 
 <template name="images">
-  <img src="laptops.jpg" alt="lots of laptop screens"/>
+  <img src="{{img_src}}" alt="{{img_alt}}"/>
 </template>
