--- a/Meteor.js Development/CourseWork_first/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork_first/dev/image_share/image_share.html
@@ -17,7 +17,7 @@
         {{#each images}}
         <div class="col-xs-12 col-md-3">
             <div class="thumbnail">
-                <img src="{{img_src}}" alt="{{img_alt}}"/>
+                <img src="{{img_src}}" alt="{{img_alt}}" class="js-image"/>
                 <div class="caption">
                     <h3>Thumbnail Label</h3>
                     <p>description of image</p>
