--- a/Meteor.js Development/CourseWork/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork/dev/image_share/image_share.html
@@ -15,12 +15,13 @@
     <template name="images">
     <div class="row">
         {{#each images}}
-        <div class="col-xs-12 col-md-3">
+        <div class="col-xs-12 col-md-3" id="{{_id}}">
             <div class="thumbnail">
                 <img src="{{img_src}}" alt="{{img_alt}}" class="js-image"/>
                 <div class="caption">
                     <h3>Thumbnail Label</h3>
                     <p>description of image</p>
+                    <button class="js-del-image btn btn-warning">delete</button>
                 </div>
             </div>
         </div>
