--- a/Meteor.js Development/CourseWork/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork/dev/image_share/image_share.html
@@ -19,8 +19,9 @@
             <div class="thumbnail">
                 <img src="{{img_src}}" alt="{{img_alt}}" class="js-image"/>
                 <div class="caption">
-                    <h3>Thumbnail Label</h3>
+                    <h3>Rating: {{rating}}</h3>
                     <p>description of image</p>
+                    <p>{{> starsRating mutable=true class="js-rate-image" id=_id }}</p>
                     <button class="js-del-image btn btn-warning">delete</button>
                 </div>
             </div>
