--- a/Meteor.js Development/CourseWork/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork/dev/image_share/image_share.html
@@ -5,14 +5,25 @@
 </head>
 
 <body>
+{{> image_add_form}}
   <h1>Welcome to Meteor!</h1>
     <div class="container">
           {{> images}}
     </div>
     <!-- / container -->
 </body>
+
+<template name="image_add_form">
+  <form class="js-add-image">
+      <input type="text" name="img_src">
+      <br>
+      <input type="text" name="img_alt">
+      <button class="btn btn-success">save</button> 
+  </form> 
+  
+</template>
         
-    <template name="images">
+<template name="images">
     <div class="row">
         {{#each images}}
         <div class="col-xs-12 col-md-3" id="{{_id}}">
