--- a/Meteor.js Development/CourseWork/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork/dev/image_share/image_share.html
@@ -6,9 +6,11 @@
 
 <body>
 {{> image_add_form}}
-  <h1>Welcome to Meteor!</h1>
     <div class="container">
-          {{> images}}
+    <h1>Welcome to image share!</h1>
+    <p>{{> loginButtons}}</p>
+    <br>
+    {{> images}}
     </div><!-- / container -->
 </body>
 
@@ -24,9 +26,9 @@
 
       <div class="modal-body">
         <form class="js-add-image">
-              <input type="text" name="img_src">
+              <input type="text" name="img_src" placeholder=" image URL">
               <br>
-              <input type="text" name="img_alt">
+              <input type="text" name="img_alt" placeholder=" image alt text">
               <button class="btn btn-success">save</button> 
         </form> 
       </div><!-- end of modal-body -->
@@ -47,6 +49,7 @@
         
 <template name="images">
 <button class="btn btn-success js-show-image-form">add image</button>
+<hr>
     <div class="row">
         {{#each images}}
         <div class="col-xs-12 col-md-3" id="{{_id}}">
