--- a/Meteor.js Development/CourseWork/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork/dev/image_share/image_share.html
@@ -65,9 +65,7 @@
                     <button class="js-del-image btn btn-warning">delete</button>
                 </div>
             </div>
-        </div>
-        <!-- / col -->
+        </div><!-- / col -->
           {{/each}}
-    </div>
-    <!-- / row -->
+    </div><!-- / row -->
 </template>
