--- a/Meteor.js Development/CourseWork/dev/image_share/image_share.html
+++ b/Meteor.js Development/CourseWork/dev/image_share/image_share.html
@@ -52,6 +52,13 @@
 {{#if currentUser}}
 <button class="btn btn-success js-show-image-form">add image</button>
 {{/ if}}
+
+<h2>
+  {{#if filtering_images}}
+   Showing Images By User {{getFilterUser}} <a href="#" class="js-unset-image-filter">Show all Images</a>
+  {{/if}}
+</h2>
+
 <hr>
     <div class="row">
         {{#each images}}
